# gcloud-pydantix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
gcloud/: base.py
gcloud/auth/: client.py  constants.py  schemas.py
gcloud/base/: client.py  constants.py  exceptions.py  utils.py
gcloud/bigquery/: client.py  constants.py  schemas.py
tests/: conftest.py  test_auth.py  test_bigquery.py
tests/mocks/: __init__.py  bigquery.py
